<resources>
    <string name="app_name">BK Food Court</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_change_password">Change password</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="watermark">Powered by ProDevs Team</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="or">OR</string>
    <string name="loading">Loading...</string>
    <string name="facebook_app_id">285286372674568</string>
    <string name="fb_login_protocol_scheme">fb285286372674568</string>
    <string name="google_login">Login with Google</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="menu_logout">Logout</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="register"><u>Register</u></string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_confirm">Please enter confirm password</string>
    <string name="enter_fullname">Please enter your full name</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="enter_email_error">Please enter email</string>
    <string name="password_register_error">Please enter password</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="confirm_password_error">Password does not match</string>
    <string name="register_success">Register success</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="processing">Processing..</string>
    <string name="email_already_taken_error">Email is already taken. Please try another email</string>
    <string name="forgot_password_title">Forgot your password?</string>
    <string name="enter_email">Please enter your email!</string>
    <string name="send_new_password">Send</string>
    <string name="send_email_success">New password has been sent to your email. Please check!</string>
    <string name="not_member_error">You are not a member</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="email_password_missing_error">Please enter email/password</string>
    <string name="action_clear_cart">Clear Cart</string>

    <string name="popular_description">which has have been seen by many customers</string>
    <string name="popular_categories">Popular</string>
    <string name="best_deals">Best deal</string>
    <string name="best_deal_description">which have been chosen by many customers</string>

    <string name="menu_food_list">Food List</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_cart">Cart</string>

    <string name="you_are_employee">You are new employee</string>
    <string name="register_employee"><u>Register for employee account?</u></string>
    <string-array name="account_type">
        <item>Please select account type!</item>
        <item>Cook</item>
        <item>Manager</item>
        <item>Owner</item>
        <item>Staff</item>
    </string-array>
    <string name="employee_register_success">Register success! Admin will check and active your account soon!</string>
    <string name="account_not_active">Your account has not been activated. Please try again later!</string>
    <string name="login_success">Login success!</string>
    <string name="choose_account_type">Please select account type!</string>
    <string name="choose_your_vendor">Please choose your vendor!</string>
    <string name="accept_or_reject">Do you want to accept or reject this account?</string>
    <string name="accept"><u>Accept</u></string>
    <string name="reject"><u>Reject</u></string>
    <string name="vendor_info">Vendor information</string>
    <string name="see_detail"><u>See detail</u></string>

    <string name="payment_momo"><u>Proceed</u></string>
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_order">View order</string>

    <string name="cook_home">Cook Home</string>
    <string name="manager_home">Manager Home</string>
    <string name="staff_home">Staff Home</string>
    <string name="owner_home">Owner Home</string>
    <string name="coming_soon">Coming soon in the next updated version</string>

    <string name="enter_email_recharge">Please enter customer email</string>
    <string name="enter_pin_code">Please enter PIN code</string>
    <string name="recharge_balance">Recharge balance</string>
    <string name="enter_following_info">Please enter following infomation</string>
    <string name="see_recharge_history"><u>See recharge history</u></string>
    <string name="enter_amount">Enter the amount (<u><b><i>VNĐ</i></b></u>)</string>
    <string name="not_member">The email is not registered or does not belong to a customer account type</string>
    <string name="recharge_success">Recharge succesfull. Please recheck your account!</string>
    <string name="invalid_pin">Invalid PIN code</string>
    <string name="invalid_amount">Amount must be divisible by 500</string>
    <string name="logout_or_not">Do you want to log out of the app?</string>
    <string name="register_request_list">Register request list</string>
    <string name="recharge_history">Recharge history</string>
    <string name="order_list">Order list</string>
    <string name="order_detail">Order detail</string>
    <string name="process_this_order_or_not">Do you want to process this order</string>
</resources>