<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_category" />

    <item
        android:title="@string/menu_cart"
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"/>
        <item
            android:title="@string/view_order"
            android:id="@+id/nav_view_order"
            android:icon="@drawable/ic_baseline_view_headline_24"/>

        <item
            android:title="@string/sign_out"
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"/>

    </group>

</menu>