<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manager.RechargeBalanceAccountActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/pagerAnimation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_fileName="money_background_top.json"
        android:scaleType="centerCrop"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/funcName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/recharge_balance"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <TextView
        android:id="@+id/funcDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/enter_following_info"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funcName"
        app:layout_constraintVertical_bias="0.034" />


    <Button
        android:id="@+id/buttonOK"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/radius_listview_item"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorBlack"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="OK"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <EditText
        android:id="@+id/editTextEmailRecharge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_edit_text"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:hint="@string/enter_email_recharge"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <EditText
        android:id="@+id/editTextAmound"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_edit_text"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <EditText
        android:id="@+id/editTextPIN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_edit_text"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:hint="@string/enter_pin_code"
        android:inputType="numberPassword"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/textViewRechargeHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/see_recharge_history"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

</androidx.constraintlayout.widget.ConstraintLayout>